@@ -1,3 +1,4 @@
+tags
 Makefile.in
 aclocal.m4
 autom4te.cache/
